# location_popularity_map

./: .env.example  .gitignore  conftest.py  pyproject.toml
config/: api_router.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
test_task/api/: v1.py
test_task/core/: apps.py  cloudflare_r2_client.py  models.py
test_task/locations/: admin.py  apps.py  models.py  services.py
test_task/locations/api/v1/: filters.py  permissions.py  serializers.py  views.py
test_task/locations/migrations/: 0001_initial.py  0002_alter_location_unique_together.py  0003_alter_category_options.py  0004_location_locations_l_is_acti_9f2958_idx_and_more.py
test_task/locations/tests/: factories.py  test_models.py
test_task/locations/tests/api/v1/: test_views.py
test_task/reviews/: admin.py  apps.py  models.py
test_task/reviews/api/v1/: permissions.py  serializers.py  views.py
test_task/reviews/migrations/: 0001_initial.py  0002_alter_review_rating.py  0003_review_reviews_rev_locatio_c50640_idx_and_more.py  0004_reviewvote_reviews_rev_user_id_adb81b_idx_and_more.py
test_task/reviews/tests/: factories.py  test_models.py
test_task/reviews/tests/api/v1/: test_views.py
test_task/users/: admin.py  apps.py  models.py
test_task/users/api/v1/: serializers.py
test_task/users/migrations/: 0001_initial.py
test_task/users/tests/: factories.py  test_factories.py
