[project]
name = "test-task"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "adrf>=0.1.9",
    "aiohttp>=3.12.13",
    "black>=25.1.0",
    "coverage>=7.9.1",
    "dj-database-url>=3.0.0",
    "dj-rest-auth>=7.0.1",
    "django>=5.2.3",
    "django-allauth>=65.9.0",
    "django-environ>=0.12.0",
    "django-filter>=25.1",
    "django-pytest>=0.2.0",
    "django-redis>=6.0.0",
    "django-rest-framework>=0.1.0",
    "factory-boy>=3.3.3",
    "pandas>=2.3.0",
    "psycopg2>=2.9.10",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
    "redis>=6.2.0",
    "requests>=2.32.4",
]
